k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssafy-mysql
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssafy-mysql
  template:
    metadata:
      labels:
        app: ssafy-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        readinessProbe:
          exec:
            command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
          initialDelaySeconds: 15
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ssafy-mysql
  namespace: stage
spec:
  selector:
    app: ssafy-mysql
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssafy-backend
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssafy-backend
  template:
    metadata:
      labels:
        app: ssafy-backend
    spec:
      containers:
      - name: backend
        image: backend-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ssafy-pjt-backend
  namespace: stage
spec:
  selector:
    app: ssafy-backend
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssafy-frontend
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssafy-frontend
  template:
    metadata:
      labels:
        app: ssafy-frontend
    spec:
      containers:
      - name: frontend
        image: ssafy-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ssafy-pjt-frontend
  namespace: stage
spec:
  selector:
    app: ssafy-frontend
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssafy-pjt
  namespace: stage
spec:
  ingressClassName: nginx
  rules:
  - host: ssafy.abyssworks.dev
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: ssafy-pjt-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ssafy-pjt-frontend
            port:
              number: 80
